--- a/src/Views/CreateBranch.axaml
+++ b/src/Views/CreateBranch.axaml
@@ -62,10 +62,15 @@
       <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.StashAndReply}"
                      GroupName="LocalChanges"
-                     IsChecked="{Binding AutoStash, Mode=TwoWay}"/>
+                     IsChecked="{Binding PreAction, Mode=TwoWay, Converter={x:Static c:EnumConverters.Equals}, ConverterParameter={x:Static vm:BeforeCreateBranchAction.StashAndReaply}}"/>
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.Discard}"
                      GroupName="LocalChanges"
-                     Margin="8,0,0,0"/>
+                     Margin="8,0,0,0"
+                     IsChecked="{Binding PreAction, Mode=TwoWay, Converter={x:Static c:EnumConverters.Equals}, ConverterParameter={x:Static vm:BeforeCreateBranchAction.Discard}}"/>
+        <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.DoNothing}"
+                     GroupName="LocalChanges"
+                     Margin="8,0,0,0"
+                     IsChecked="{Binding PreAction, Mode=TwoWay, Converter={x:Static c:EnumConverters.Equals}, ConverterParameter={x:Static vm:BeforeCreateBranchAction.DoNothing}}"/>
       </StackPanel>
       
       <CheckBox Grid.Row="3" Grid.Column="1"
