--- a/src/Views/CheckoutCommit.axaml
+++ b/src/Views/CheckoutCommit.axaml
@@ -10,36 +10,38 @@
   <StackPanel Orientation="Vertical" Margin="8,0">
     <TextBlock FontSize="18"
                Classes="bold"
-               Text="{DynamicResource Text.Checkout.Commit}"/>
+               Text="{DynamicResource Text.Checkout.Commit}" />
     
-      <TextBlock FontSize="14"
-         TextWrapping="Wrap"
-         Classes="italic"
-         Text="{DynamicResource Text.Checkout.Commit.Warning}"/>
-    
-    <TextBlock TextWrapping="Wrap" Margin="0,16,0,0">
-      <TextBlock Classes="bold"  Grid.Row="0" Grid.Column="0"
-           Text="{DynamicResource Text.Checkout.CommitTarget.Sha}"/>
-        <TextBlock TextWrapping="Wrap" Text="{Binding Commit}"/>
-        (<TextBlock Classes="italic" TextWrapping="Wrap" Text="{Binding Commit, Converter={x:Static c:StringConverters.ToShortSHA}}"/>)
-    </TextBlock>
-    
-    <StackPanel Margin="0, 26, 0, 0" Grid.Row="1" Grid.Column="1" Orientation="Vertical" IsVisible="{Binding HasLocalChanges}">
-      <TextBlock Grid.Row="1" Grid.Column="0"
-                 HorizontalAlignment="Left" VerticalAlignment="Center"
+    <TextBlock Margin="0,8,0,16"
+               Text="{DynamicResource Text.Checkout.Commit.Warning}"
+               TextWrapping="Wrap"
+               Foreground="{DynamicResource Brush.FG2}"
+               FontStyle="Italic"/>
+
+    <Grid RowDefinitions="32,Auto" ColumnDefinitions="120,*">
+      <TextBlock Grid.Row="0" Grid.Column="0"
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
-                 Text="{DynamicResource Text.Checkout.LocalChanges}"/>
-    
-      <StackPanel Margin="0, 13, 0, 0" Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
+                 Text="{DynamicResource Text.Checkout.Commit.Target}" />
+      <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+        <Path Width="14" Height="14" Margin="0,8,0,0" Data="{StaticResource Icons.Commit}" />
+        <TextBlock Classes="monospace" Foreground="DarkOrange" VerticalAlignment="Center" Margin="8,0" Text="{Binding Commit.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" />
+        <TextBlock Text="{Binding Commit.Subject}"/>
+      </StackPanel>
+
+      <TextBlock Grid.Row="1" Grid.Column="0"
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.Checkout.LocalChanges}"
+                 IsVisible="{Binding HasLocalChanges}"/>
+      <StackPanel Grid.Row="1" Grid.Column="1" Height="32" Orientation="Horizontal" IsVisible="{Binding HasLocalChanges}">
         <RadioButton Content="{DynamicResource Text.Checkout.LocalChanges.StashAndReply}"
                      GroupName="LocalChanges"
-                     IsChecked="{Binding AutoStash, Mode=TwoWay}"/>
+                     IsChecked="{Binding AutoStash, Mode=TwoWay}" />
         <RadioButton Content="{DynamicResource Text.Checkout.LocalChanges.Discard}"
                      GroupName="LocalChanges"
-                     Margin="8,0,0,0"/>
+                     Margin="8,0,0,0" />
       </StackPanel>
-    </StackPanel>
-    
-    
+    </Grid>
   </StackPanel>
 </UserControl>
